--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
+    "react-scroll-wheel-handler": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "sync": "aws s3 sync ./build s3://pathfindingvisualizer-prince/ --no-verify-ssl",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
