--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "shortest-path-finder-2",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
+  "start_url": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
